# bookstore-backend

./: Dockerfile  README.md  pyproject.toml
app/: db.py  main.py
app/models/: __init__.py  book.py  bookstore.py  borrowing.py  client.py  sale.py
app/routes/: book.py  bookstore.py  borrowing.py  client.py  login.py  sale.py
app/services/: borrowing.py
app/tests/: db.py  test_book.py  test_borrowing.py  test_main.py  utils.py
app/utils/: auth.py  utils.py
tests/: test_bookstore_backend.py
